responsive design improved

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <h1 class="title">Bubble sort</h1>
 
 
-    <div><button id="randomize">randomize</button>
+    <div class="btns-box">
+        <button id="randomize">randomize</button>
         <button id="sort">sort</button>
     </div>
 
